--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "components": "^0.1.0"
   }
 }
