--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .idea
 .vscode
-src/Key/
+/src/API_KEY
 # dependencies
 /node_modules
 /.pnp
